# cicd_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/source/: api.md  cicd-pipeline.md  conf.py  contributing.md  development.md  getting-started.md  index.md  overview.md
scripts/: README.md  generate_coverage_badge.py  setup_venv.bat  setup_venv.ps1  setup_venv.py
src/python_cicd_demo/: __init__.py  main.py
tests/: test_main.py
