[tool.poetry]
name = "python-cicd-demo"
version = "0.1.0"
description = "A comprehensive Python CI/CD demo showcasing modern software engineering best practices"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "python_cicd_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
bandit = "^1.8.6"
black = "^25.1.0"
isort = "^6.0.1"
python-semantic-release = "^10.4.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
myst-parser = "^4.0.1"
pbr = "^7.0.1"
sphinxcontrib-mermaid = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/python_cicd_demo --cov-report=xml --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_pattern = [
    "src/python_cicd_demo/__init__.py:__version__ = \"{version}\"",
]
build_command = "poetry build"
